add background, more basic styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href='./game.css' rel='stylesheet' type='text/css'/>
 </head>
 <body>
-  <h1>Hey, it's Tron</h1>
+  <h1>Tron</h1>
   <container class="main">
     <section class="left-side">
       <h3 class="player1">
@@ -16,7 +16,10 @@
         Score: <span class="score-actual">0</span>
       </h4>
     </section>
-    <canvas id="game" width="600" height="600"></canvas>
+    <section class="middle-side">
+      <canvas id="game" width="600" height="600"></canvas>
+      <p>Made with ❤️ Nick Dambrosio</p>
+    </section>
     <section class="right-side">
             <h3 class="player2">
         Player 2
