new bg, add meta controls

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </section>
     <section class="middle-side">
       <canvas id="game" width="600" height="600"></canvas>
-      <p>Made with
-        <i class="far fa-heart"></i> Nick Dambrosio</p>
-      <p>
-        <a href="https://30ozsteak.github.io/portfolio/">
-          <i class="fab fa-github"></i>
-        </a>
-      </p>
+      <section class="below-canvas">
+        <ul>
+          <li>Start</li>
+          <li>How to Play</li>
+          <li>Pause</li>
+        </ul>
+      </section>
     </section>
     <section class="right-side">
       <h3 class="player2">
