played street fighter for an hour and forgot where I was

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <canvas id="game" width="600" height="600"></canvas>
       <section class="below-canvas">
         <ul>
-          <li>Start</li>
-          <li>How to Play</li>
-          <li>Pause</li>
+          <li id = "start">Start</li>
+          <li id = "how2play">How to Play</li>
+          <li id = "pause" >Pause</li>
         </ul>
       </section>
     </section>
