add welcome screen

--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
     </section>
     <section class="middle-side">
       <canvas id="game" width="600" height="600"></canvas>
+      <section class="welcome-screen">
+        <p>Welcome to Tron! an HTML5 Canvas game based on the classic Arcade game of the same name.</p>
+        <p>This is a two player game where each player controls a lightcycle and create walls around the map as they drive</p>
+        <p>The first one to crash, be it into a wall, another player, or either players tails, loses the round!</p>
+        <p>Have fun!</p>
+      </section>
       <section class="below-canvas">
         <ul>
           <li id = "start">Start</li>
-          <li id = "how2play">How to Play</li>
+          <li id = "reset">Reset</li>
+          <li id = "howToPlay">How to Play</li>
           <li id = "pause" >Pause</li>
         </ul>
       </section>
