--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <p>Welcome to Tron! an HTML5 Canvas game based on the classic Arcade game of the same name.</p>
         <p>This is a two player game where each player controls a lightcycle and create walls around the map as they drive</p>
         <p>The first one to crash, be it into a wall, another player, or either players tails, loses the round!</p>
-        <p>Have fun!</p>
+        <p>Press Start to Play, Have fun!</p>
       </section>
       <section class="below-canvas">
         <ul>
-          <li id = "start">Start</li>
+          <li id = "start"><i class="fas fa-caret-right"></i>Start</li>
           <li id = "reset">Reset</li>
           <li id = "howToPlay">How to Play</li>
           <li id = "pause" >Pause</li>
