add lives mechanic

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         Player 1
       </h3>
       <h4 class="p1score score">
-        Score:
-        <span class="score-actual">0</span>
+        Lives:
+        <span class="score-actual">3</span>
       </h4>
     </section>
     <section class="middle-side">
@@ -44,8 +44,8 @@
         Player 2
       </h3>
       <h4 class="p2score score">
-        Score:
-        <span class="score-actual">0</span>
+        Lives:
+        <span class="score-actual">3</span>
       </h4>
     </section>
   </container>
