Add controls guide

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         Lives:
         <span class="score-actual">3</span>
       </h4>
+      <section class="controls">
+        <p>Controls</p>
+        <p>W, A, S, D</p>
+      </section>
     </section>
     <section class="middle-side">
       <canvas id="game" width="600" height="600"></canvas>
@@ -47,6 +51,10 @@
         Lives:
         <span class="score-actual">3</span>
       </h4>
+      <section class="controls">
+        <p>Controls</p>
+        <p>Up, Down, Left, Right</p>
+      </section>
     </section>
   </container>
   <script src="main.bundle.js"></script>
