clean up code, give up on switch statement

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li id = "start"><i class="fas fa-caret-right"></i>Start</li>
           <li id = "howToPlay">How to Play</li>
           <li id = "pause" >Pause</li>
-          <li id = "reset">Reset</li>
+          <li id = "reset">Next Round</li>
         </ul>
       </section>
     </section>
