--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="middle-side">
       <canvas id="game" width="600" height="600"></canvas>
       <section class="welcome-screen">
-        <p>Welcome to Tron! an HTML5 Canvas game based on the classic Arcade game of the same name.</p>
+        <p>Welcome to Tron! an HTML5 Canvas game based on the classic arcade game of the same name.</p>
         <p>This is a two player game where each player controls a lightcycle and create walls around the map as they drive</p>
         <p>The first one to crash, be it into a wall, another player, or either players tails, loses the round!</p>
         <p>Press Start to Play, Have fun!</p>
