clean up css file

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
         <p>The first one to crash, be it into a wall, another player, or either players tails, loses the round!</p>
         <p>Press Start to Play, Have fun!</p>
       </section>
+      <section class="game-over-screen">
+        <p>Round Over!</p>
+        <p class="play-again">Play Again?</p>
+      </section>
       <section class="below-canvas">
         <ul>
           <li id = "start"><i class="fas fa-caret-right"></i>Start</li>
           <li id = "howToPlay">How to Play</li>
           <li id = "pause" >Pause</li>
-          <li id = "reset">Next Round</li>
         </ul>
       </section>
     </section>
