--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul>
           <li id = "start"><i class="fas fa-caret-right"></i>Start</li>
           <li id = "howToPlay">How to Play</li>
-          <li id = "pause" >Pause</li>
+          <li id = "reset" >Reset</li>
         </ul>
       </section>
     </section>
