--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         Player 1
       </h3>
       <h4 class="p1score score">
-        Lives:
-        <span class="score-actual">3</span>
+        <span class="score-actual"></span>
       </h4>
       <section class="controls">
         <p>Controls</p>
@@ -51,8 +50,7 @@
         Player 2
       </h3>
       <h4 class="p2score score">
-        Lives:
-        <span class="score-actual">3</span>
+        <span class="score-actual"></span>
       </h4>
       <section class="controls">
         <p>Controls</p>
