fix readme, fix this

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>Press Start to Play, Have fun!</p>
       </section>
       <section class="game-over-screen">
-        <p>Round Over!</p>
+        <p>Game Over!</p>
         <p class="play-again">Play Again?</p>
       </section>
       <section class="below-canvas">
